--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "next": "^14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@plotly/plotly.js": "^2.27.0",
+    "plotly.js": "^2.27.0",
     "react-plotly.js": "^2.6.0",
     "papaparse": "^5.4.1",
     "date-fns": "^2.30.0",
@@ -30,6 +30,7 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@types/papaparse": "^5.3.14",
+    "@types/plotly.js": "^2.12.29",
     "typescript": "^5.2.0",
     "tailwindcss": "^3.3.0",
     "autoprefixer": "^10.4.16",
