--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/react-dom": "^18.2.0",
     "@types/papaparse": "^5.3.14",
     "@types/plotly.js": "^2.12.29",
+    "@types/react-plotly.js": "^2.6.3",
     "typescript": "^5.2.0",
     "tailwindcss": "^3.3.0",
     "autoprefixer": "^10.4.16",
