--- a/package.json
+++ b/package.json
@@ -10,33 +10,34 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.50.1",
+    "@tailwindcss/forms": "^0.5.6",
+    "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
+    "lucide-react": "^0.294.0",
     "next": "^14.0.0",
+    "papaparse": "^5.4.1",
+    "plotly.js": "^2.27.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "plotly.js": "^2.27.0",
-    "react-plotly.js": "^2.6.0",
-    "papaparse": "^5.4.1",
-    "date-fns": "^2.30.0",
-    "zustand": "^4.4.0",
     "react-hook-form": "^7.47.0",
+    "react-plotly.js": "^2.6.0",
+    "tailwind-merge": "^2.0.0",
     "zod": "^3.22.0",
-    "@tailwindcss/forms": "^0.5.6",
-    "lucide-react": "^0.294.0",
-    "clsx": "^2.0.0",
-    "tailwind-merge": "^2.0.0"
+    "zustand": "^4.4.0"
   },
   "devDependencies": {
     "@types/node": "^20.8.0",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
     "@types/papaparse": "^5.3.14",
     "@types/plotly.js": "^2.12.29",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "@types/react-plotly.js": "^2.6.3",
-    "typescript": "^5.2.0",
-    "tailwindcss": "^3.3.0",
     "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31",
     "eslint": "^8.52.0",
-    "eslint-config-next": "^14.0.0"
+    "eslint-config-next": "^14.0.0",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5.2.0"
   }
-} 
+}
