--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-plotly.js": "^2.6.0",
+    "styled-jsx": "^5.1.7",
     "tailwind-merge": "^2.0.0",
     "zod": "^3.22.0",
     "zustand": "^4.4.0"
